--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -34,44 +34,44 @@
             <ColumnDefinition Width="217*"/>
             <ColumnDefinition Width="165*"/>
         </Grid.ColumnDefinitions>
-        <CheckBox Content="Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="25,491,0,0" VerticalAlignment="Top"  x:Name="LifePoverty" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Grid.ColumnSpan="2" Height="15" Width="182" />
-        <CheckBox Content="Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="25,512,0,0" VerticalAlignment="Top"  x:Name="LifeUnemployment" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Grid.ColumnSpan="2" Height="15" Width="225" />
-        <CheckBox Content="Life Expectancy and per Capita Income" HorizontalAlignment="Left" Margin="22,532,0,0" VerticalAlignment="Top"  x:Name="LifeperCapita" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Grid.ColumnSpan="2" Height="15" Width="244" />
-        <Button Content="Calculate Correlation" HorizontalAlignment="Left" Margin="41,560,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Height="20" />
+        <CheckBox Content="Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="68,488,0,0" VerticalAlignment="Top"  x:Name="LifePoverty" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Grid.ColumnSpan="2" Height="15" Width="182" />
+        <CheckBox Content="Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="68,512,0,0" VerticalAlignment="Top"  x:Name="LifeUnemployment" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Grid.ColumnSpan="2" Height="15" Width="225" />
+        <CheckBox Content="Life Expectancy and per Capita Income" HorizontalAlignment="Left" Margin="68,532,0,0" VerticalAlignment="Top"  x:Name="LifeperCapita" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Grid.ColumnSpan="2" Height="15" Width="244" />
+        <Button Content="Calculate Correlation" HorizontalAlignment="Left" Margin="64,560,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Height="20" />
         <TextBox HorizontalAlignment="Left"
 			ScrollViewer.HorizontalScrollBarVisibility="Auto"
 			ScrollViewer.VerticalScrollBarVisibility="Auto"
 			ScrollViewer.CanContentScroll="True"
-			Height="75" Margin="10,585,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="349" x:Name="ResultBox" Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="1" />
-        <Button Content="Clear" HorizontalAlignment="Left" Margin="108,560,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Grid.Column="2" Grid.Row="1" Height="20" />
-        <Label Content="Find the Correlation between:" HorizontalAlignment="Left" VerticalAlignment="Top" Target="{Binding}" Grid.Column="1" Grid.Row="1" FontWeight="Bold" FontFamily="Tahoma" Foreground="Gray" Margin="22,456,0,0" FontSize="15" Grid.ColumnSpan="2" Height="28" Width="235" />
-        <Label Content="Life Expectancy Based on Socio Economic Indicators&#xD;&#xA;                                 City of Chicago" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Californian FB" FontSize="24" Background="#FF0009D1" Foreground="White"  Grid.ColumnSpan="4" Margin="10,74,151,524" Grid.RowSpan="2" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontWeight="Bold" Grid.Column="1" >
+			Height="75" Margin="41,585,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="349" x:Name="ResultBox" Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="1" />
+        <Button Content="Clear" HorizontalAlignment="Left" Margin="184,560,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Grid.Column="2" Grid.Row="1" Height="20" />
+        <Label Content="Find the Correlation between:" HorizontalAlignment="Left" VerticalAlignment="Top" Target="{Binding}" Grid.Column="1" Grid.Row="1" FontWeight="Bold" FontFamily="Tahoma" Foreground="Gray" Margin="64,457,0,0" FontSize="15" Grid.ColumnSpan="2" Height="28" Width="235" />
+        <Label Content="Life Expectancy Based on Socio Economic Indicators&#xD;&#xA;                                 City of Chicago" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Californian FB" FontSize="24" Background="#FF0009D1" Foreground="White"  Grid.ColumnSpan="3" Margin="10,10,37,588" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontWeight="Bold" Grid.RowSpan="2" Grid.Column="1" >
             <Label.Effect>
                 <DropShadowEffect/>
             </Label.Effect>
         </Label>
-        <Button Grid.ColumnSpan="2" Content="Click here to view Life Expectancy for &#xD;&#xA;different communities in Chicago" HorizontalAlignment="Left" Margin="41,293,0,0" Grid.Row="1" VerticalAlignment="Top" Width="225" Height="99" Click="Button_Click_2" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" BorderBrush="{DynamicResource {x:Static SystemColors.MenuTextBrushKey}}" Cursor="Hand" OpacityMask="{DynamicResource {x:Static SystemColors.HotTrackBrushKey}}" Grid.Column="1">
+        <Button Grid.ColumnSpan="2" Content="Life Expectancy Statistics" HorizontalAlignment="Left" Margin="41,293,0,0" Grid.Row="1" VerticalAlignment="Top" Width="225" Height="99" Click="Button_Click_2" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" BorderBrush="{DynamicResource {x:Static SystemColors.MenuTextBrushKey}}" Cursor="Hand" OpacityMask="{DynamicResource {x:Static SystemColors.HotTrackBrushKey}}" Grid.Column="1" ToolTip="Click here to view the Life Expectanciesin different communities">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="Click here to view Poverties for  &#xD;&#xA; different communities" Grid.Column="1" HorizontalAlignment="Left" Margin="41,171,0,0" Grid.Row="1" VerticalAlignment="Top" Width="225" Click="Button_Click_4" Height="99" Grid.ColumnSpan="2">
+        <Button Content="Poverty Statistics" Grid.Column="1" HorizontalAlignment="Left" Margin="41,171,0,0" Grid.Row="1" VerticalAlignment="Top" Width="225" Click="Button_Click_4" Height="99" Grid.ColumnSpan="2" ToolTip="Click here to view the poverties in different communities">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="Click here to view Unemployment for &#xD;&#xA; different communities" Grid.Column="2" HorizontalAlignment="Left" Margin="353,171,0,0" Grid.Row="1" VerticalAlignment="Top" Width="246" Height="99" Click="Button_Click_5" Grid.ColumnSpan="2">
+        <Button Content="Unemployment Statistics" Grid.Column="2" HorizontalAlignment="Left" Margin="314,171,0,0" Grid.Row="1" VerticalAlignment="Top" Width="246" Height="99" Click="Button_Click_5" Grid.ColumnSpan="2" ToolTip="Click here to view the Unemployment in different communities">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="Click here to view per Capita Income for &#xD;&#xA; different communities" Grid.Column="2" HorizontalAlignment="Left" Margin="353,297,0,0" Grid.Row="1" VerticalAlignment="Top" Width="246" Height="91" Click="Button_Click_6" Grid.ColumnSpan="2">
+        <Button Content="Per Capita Income Statistics" Grid.Column="2" HorizontalAlignment="Left" Margin="314,301,0,0" Grid.Row="1" VerticalAlignment="Top" Width="246" Height="91" Click="Button_Click_6" Grid.ColumnSpan="2" ToolTip="Click here to view the per Capita Statistics in different communities">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="GO" Grid.Column="3" HorizontalAlignment="Left" Margin="102,477,0,0" Grid.Row="1" VerticalAlignment="Top" Width="66" Height="36" Click="Button_Click_7" ToolTip="Click here to view the trend of life Expectancy in Chicago &amp;#xD;&amp;#xA;Select community from the drop down below"/>
-        <ComboBox Grid.Column="2" HorizontalAlignment="Left" Margin="313,477,0,0" Grid.Row="1" VerticalAlignment="Top" Width="159" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged" Name ="comboBox1" Height="36" Grid.ColumnSpan="2" ToolTip="Select a comunity from the drop down below to view the life expectancy trend"/>
+        <Button Content="GO" Grid.Column="3" HorizontalAlignment="Left" Margin="84,477,0,0" Grid.Row="1" VerticalAlignment="Top" Width="66" Height="36" Click="Button_Click_7" ToolTip="Click here to view the trend of life Expectancy in Chicago &amp;#xD;&amp;#xA;Select community from the drop down below"/>
+        <ComboBox Grid.Column="2" HorizontalAlignment="Left" Margin="299,477,0,0" Grid.Row="1" VerticalAlignment="Top" Width="159" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged" Name ="comboBox1" Height="36" Grid.ColumnSpan="2" ToolTip="Select a comunity from the drop down below to view the life expectancy trend"/>
         <Label Grid.Column="2" HorizontalAlignment="Left" Margin="345,493,0,0" Grid.Row="1" VerticalAlignment="Top"/>
         <Label Content="Life Expectancy Trend" Grid.Column="2" HorizontalAlignment="Left" Margin="327,438,0,0" Grid.Row="1" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="39" Width="131"/>
     </Grid>
