--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -3,9 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit" x:Class="Project.SubWindow"
         Title="Chicago Data Portal" 
-        Height="700" 
-    Width="755.225"
-        Background="WhiteSmoke" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" Cursor="IBeam">
+        
+        Background="WhiteSmoke" WindowStartupLocation="CenterScreen">
     <Window.Effect>
         <DropShadowEffect/>
     </Window.Effect>
@@ -15,7 +14,7 @@
             <GradientStop Color="White" Offset="1"/>
         </LinearGradientBrush>
     </Window.BorderBrush>
-    <Grid Cursor="Hand" Background="{DynamicResource {x:Static SystemColors.ControlLightLightBrushKey}}" HorizontalAlignment="Left" Width="752">
+    <Grid>
         <Grid.OpacityMask>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="Black" Offset="0"/>
@@ -29,13 +28,14 @@
             <RowDefinition Height="136*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="23*"/>
             <ColumnDefinition Width="0*"/>
-            <ColumnDefinition Width="9*"/>
-            <ColumnDefinition Width="34*"/>
-            <ColumnDefinition Width="604*"/>
-            <ColumnDefinition Width="62*"/>
-            <ColumnDefinition Width="57*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="1365"/>
+            <ColumnDefinition Width="0"/>
+            <ColumnDefinition Width="0"/>
+
         </Grid.ColumnDefinitions>
         <CheckBox Content="Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="138,63,0,0" VerticalAlignment="Top"  x:Name="LifePoverty" Grid.Row="2" Grid.Column="4" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Height="15" Width="182" />
         <CheckBox Content="Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="138,85,0,0" VerticalAlignment="Top"  x:Name="LifeUnemployment" Grid.Row="2" Grid.Column="4" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Height="15" Width="225" />
@@ -45,37 +45,45 @@
 			ScrollViewer.HorizontalScrollBarVisibility="Auto"
 			ScrollViewer.VerticalScrollBarVisibility="Auto"
 			ScrollViewer.CanContentScroll="True"
-			Height="75" Margin="111,160,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="349" x:Name="ResultBox" Grid.Row="2" Grid.Column="4" />
+			Height="75" Margin="111,185,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="349" x:Name="ResultBox" Grid.Row="2" Grid.Column="4" />
         <Button Content="Clear" HorizontalAlignment="Left" Margin="353,135,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Grid.Column="4" Grid.Row="2" Height="20" />
         <Label Content="Find the Correlation between:" HorizontalAlignment="Left" VerticalAlignment="Top" Target="{Binding}" Grid.Column="4" Grid.Row="2" FontWeight="Bold" FontFamily="Tahoma" Foreground="Gray" Margin="134,32,0,0" FontSize="15" Height="28" Width="235" />
-        <Label Content="Life Expectancy Based on Socio Economic Indicators&#xD;&#xA;                                 City of Chicago" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Californian FB" FontSize="24" Background="#FF0009D1" Foreground="White" Margin="0,10,14,305" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontWeight="Bold" Grid.RowSpan="2" Grid.Column="4" Grid.ColumnSpan="2" >
+        <Label Content="Life Expectancy Based on Socio Economic Indicators&#xD;&#xA;                                 City of Chicago" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Californian FB" FontSize="24" Background="#FF0009D1" Foreground="White" Margin="0,120,0,200" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontWeight="Bold" Grid.Column="4" Grid.Row="1">
             <Label.Effect>
                 <DropShadowEffect/>
             </Label.Effect>
         </Label>
-        <Button Content="Life Expectancy Statistics" HorizontalAlignment="Left" Margin="463,332,0,0" Grid.Row="1" VerticalAlignment="Top" Width="176" Height="55" Click="Button_Click_2" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" BorderBrush="{DynamicResource {x:Static SystemColors.MenuTextBrushKey}}" Cursor="Hand" OpacityMask="{DynamicResource {x:Static SystemColors.HotTrackBrushKey}}" Grid.Column="4" ToolTip="Click here to view  Life Expectancy in different communities" Grid.ColumnSpan="3">
+        <Button Content="Life Expectancy Statistics" HorizontalAlignment="Left" Margin="1020,220,0,0" Grid.Row="1" VerticalAlignment="Top" Width="345" Height="40" Click="Button_Click_2" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" BorderBrush="{DynamicResource {x:Static SystemColors.MenuTextBrushKey}}" Cursor="Hand" OpacityMask="{DynamicResource {x:Static SystemColors.HotTrackBrushKey}}" Grid.Column="4" ToolTip="Click here to view  Life Expectancy in different communities">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="Poverty Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="0,114,0,0" Grid.Row="1" VerticalAlignment="Top" Width="176" Click="Button_Click_4" Height="55" ToolTip="Click here to view poverty in different communities">
+        <Button Content="Poverty Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="0,220,0,0" Grid.Row="1" VerticalAlignment="Top" Width="340" Click="Button_Click_4" Height="40" ToolTip="Click here to view poverty in different communities">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="Unemployment Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="111,187,0,0" Grid.Row="1" VerticalAlignment="Top" Width="171" Height="55" Click="Button_Click_5" ToolTip="Click here to view  Unemployment in different communities">
+        <Button Content="Unemployment Statistics" Grid.Column="4" HorizontalAlignment="Right" Margin="0,220,685,0" Grid.Row="1" VerticalAlignment="Top" Width="340" Height="40" Click="Button_Click_5" ToolTip="Click here to view  Unemployment in different communities">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="Per Capita Income Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="284,254,0,0" Grid.Row="1" VerticalAlignment="Top" Width="176" Height="55" Click="Button_Click_6" ToolTip="Click here to view per Capita Statistics in different communities">
+        <Button Content="Per Capita Income Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="680,220,0,0" Grid.Row="1" VerticalAlignment="Top" Width="340" Height="40" Click="Button_Click_6" ToolTip="Click here to view per Capita Statistics in different communities">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="GO" Grid.Column="4" HorizontalAlignment="Left" Margin="196,314,0,0" Grid.Row="1" VerticalAlignment="Top" Width="66" Height="36" Click="Button_Click_7" ToolTip="Click here to view the trend of life Expectancy in Chicago &amp;#xD;&amp;#xA;Select community from the drop down below"/>
-        <ComboBox Grid.Column="4" HorizontalAlignment="Left" Margin="10,314,0,0" Grid.Row="1" VerticalAlignment="Top" Width="159" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged" Name ="comboBox1" Height="36" ToolTip="Select a comunity from the drop down below to view the life expectancy trend"/>
+        <Button Content="GO" Grid.Column="4" HorizontalAlignment="Left" Margin="196,366,0,0" Grid.Row="1" VerticalAlignment="Top" Width="66" Height="36" Click="Button_Click_7" ToolTip="Click here to view the trend of life Expectancy in Chicago &amp;#xD;&amp;#xA;Select community from the drop down below" Grid.RowSpan="2" />
+        <ComboBox Grid.Column="4" HorizontalAlignment="Left" Margin="10,363,0,0" Grid.Row="1" VerticalAlignment="Top" Width="159" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged" Name ="comboBox1" Height="36" ToolTip="Select a comunity from the drop down below to view the life expectancy trend" Grid.RowSpan="2" />
         <Label Grid.Column="4" HorizontalAlignment="Left" Margin="345,68,0,0" Grid.Row="2" VerticalAlignment="Top" Height="10" Width="10"/>
-        <Label Content="Life Expectancy Trend" Grid.Column="4" HorizontalAlignment="Left" Margin="10,280,0,0" Grid.Row="1" VerticalAlignment="Top" Height="34" Width="143" FontSize="14"/>
+        <Label Content="Life Expectancy Trend" Grid.Column="4" HorizontalAlignment="Left" Margin="10,322,0,0" Grid.Row="1" VerticalAlignment="Top" Height="34" Width="143" FontSize="14"/>
+        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="0,0,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
+        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="220,0,0,0" Name="image2" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
+        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="440,0,0,0" Name="image3" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
+        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="660,0,0,0" Name="image4" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
+        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="880,0,0,0" Name="image5" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
+        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="1100,0,0,0" Name="image6" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
+        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="1320,0,0,0" Name="image7" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
+        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="1540,0,0,0" Name="image8" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
     </Grid>
 </Window>
