--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -77,7 +77,7 @@
         <ComboBox Grid.Column="4" HorizontalAlignment="Left" Margin="10,363,0,0" Grid.Row="1" VerticalAlignment="Top" Width="159" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged" Name ="comboBox1" Height="36" ToolTip="Select a comunity from the drop down below to view the life expectancy trend" Grid.RowSpan="2" />
         <Label Grid.Column="4" HorizontalAlignment="Left" Margin="345,68,0,0" Grid.Row="2" VerticalAlignment="Top" Height="10" Width="10"/>
         <Label Content="Life Expectancy Trend" Grid.Column="4" HorizontalAlignment="Left" Margin="10,322,0,0" Grid.Row="1" VerticalAlignment="Top" Height="34" Width="143" FontSize="14"/>
-        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="0,0,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
+        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="0,0,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="220"  Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
         <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="220,0,0,0" Name="image2" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
         <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="440,0,0,0" Name="image3" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
         <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="660,0,0,0" Name="image4" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
@@ -85,5 +85,6 @@
         <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="1100,0,0,0" Name="image6" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
         <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="1320,0,0,0" Name="image7" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
         <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="1540,0,0,0" Name="image8" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
+        <Image Grid.ColumnSpan="5" HorizontalAlignment="Left" Height="100" Margin="95,72,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="100"/>
     </Grid>
 </Window>
