--- a/Welcome_Chicago_Data_Portal/Welcome_Chicago_Data_Portal/MainWindow.xaml
+++ b/Welcome_Chicago_Data_Portal/Welcome_Chicago_Data_Portal/MainWindow.xaml
@@ -2,26 +2,42 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Chicago Data Portal" Height="1171.937" Width="1964.947">
-    <Grid>
+    <Window.Background >
+     <ImageBrush  ImageSource="/Welcome_Chicago_Data_Portal;component/Images/background%20%282%29.jpg" Opacity="1">
+     </ImageBrush>
+     </Window.Background >
+                <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="25*"/>
             <ColumnDefinition Width="721*"/>
         </Grid.ColumnDefinitions>
-        <Label Content="Welcome to the Chicago Data Portal" Margin="0,100,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="42" Width="333" FontSize="20" Background="{DynamicResource {x:Static SystemColors.GradientActiveCaptionBrushKey}}" Grid.Column="1">
+        <Label Content="Welcome to the Chicago Data Portal" Margin="0,100,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Height="70" Width="800" FontSize="40" Grid.Column="1" Opacity="1" Foreground="White">
             <Label.Effect>
                 <DropShadowEffect/>
             </Label.Effect>
+            <Label.Background>
+                <ImageBrush />
+            </Label.Background>
         </Label>
-        <Label Content="                      This is a unique GUI that will throw light on some interesting facts related to Life Expectancy. &#xA;                       What are the factors that affect life Expectancy? Is it Poverty, Unemployment or Income?&#xD;&#xA;               This UI will show some statistics that might help understand the correlation between life Expectancy and&#xD;&#xA;                                  Socio Economic Indicators like Poverty, Unemployment, and the Incomes. &#xD;&#xA;&#xD;&#xA;                              &#xD;&#xA;&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;                             Click on the Start Button below to have a graphical representation of these Statistics" HorizontalAlignment="Center" Margin="0,200,37,0" VerticalAlignment="Top" Height="213" Width="750" FontSize="14" Background="{DynamicResource {x:Static SystemColors.GradientActiveCaptionBrushKey}}" Grid.ColumnSpan="2">
+        <Label Content="                      This is a unique GUI that will enlighten you with some interesting facts related to Life Expectancy. &#xA;&#xA;                       What are the factors that affect life Expectancy? Is it Poverty, Unemployment or Income?&#xD;&#xA;&#xD;&#xA;               This UI will show some statistics that might help understand the correlation between life Expectancy and&#xD;&#xA;&#xD;&#xA;                                  Socio Economic Indicators like Poverty, Unemployment, and the Incomes." HorizontalAlignment="Center" Margin="0,200,37,0" VerticalAlignment="Top" Height="200" Width="1000" FontSize="18" Grid.ColumnSpan="2" Foreground="White">
             <Label.Effect>
                 <DropShadowEffect/>
             </Label.Effect>
+            <Label.Background>
+                <ImageBrush />
+            </Label.Background>
         </Label>
-        <Button Content="Start" HorizontalAlignment="Center" Margin="0,450,0,0" VerticalAlignment="Top" Width="96" Height="33" FontSize="16" ToolTip="Click Start to view the life expectancies based on Socio Economic Indicators" Click="Button_Click" Grid.Column="1">
+        <Button Content="Start" HorizontalAlignment="Center" Margin="0,550,0,0" VerticalAlignment="Top" Width="150" Height="40" FontSize="18" ToolTip="Click on the Start Button below to have a graphical representation of these Statistics" Click="Button_Click" Grid.Column="1" Foreground="White">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+                    <GradientStop Color="Black" Offset="0" />
+                    <GradientStop Color="White" Offset="1" />
+                </LinearGradientBrush>
+            </Button.Background>
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-
+        <Label Content="Let' Get Started!!" Grid.Column="1" Height="50" HorizontalAlignment="Center" Margin="0,400,0,0" Name="label1"  Width="200" VerticalAlignment="Top" Foreground="White" FontSize="24" FontWeight="Normal"></Label>
     </Grid>
 </Window>
