--- a/Welcome_Chicago_Data_Portal/Welcome_Chicago_Data_Portal/MainWindow.xaml
+++ b/Welcome_Chicago_Data_Portal/Welcome_Chicago_Data_Portal/MainWindow.xaml
@@ -3,9 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Chicago Data Portal" Height="1171.937" Width="1964.947">
     <Window.Background >
-     <ImageBrush  ImageSource="/Welcome_Chicago_Data_Portal;component/Images/background%20%282%29.jpg" Opacity="1">
-     </ImageBrush>
-     </Window.Background >
+        <ImageBrush  ImageSource="/GUI-LifeExpectancy;component/Images/background2.jpg" Opacity="1"/>
+
+    </Window.Background >
                 <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="25*"/>
